Added package-lock.json, as npm insisted.  Created a (bash) startup script, which depends on your having deployed it in the directory I did.  Added repository info.  Added the trump pic to the provided conf, and excluded it from being wrong.

--- a/wrongtemplate.html
+++ b/wrongtemplate.html
@@ -6,6 +6,9 @@
       .wrongperson {
         background-image: url('XXWRONGFILENAMEHEREXX');
       }
+      .rightperson {
+        background-image: url('XXRIGHTFILENAMEHEREXX');
+      }
     </style>
   </head>
 
